# TOF_app

./: .gitignore  PyTOF.ini  pyTOF-v23.py
pytof_new/: DG_DLL_1.c  DG_DLL_1.h  README.md  app.py  mock_20260623_172428.pytof  mock_20260623_172733.pytof  mock_20260623_223055.pytof  mock_20260623_223058.pytof  mock_20260623_223059.pytof  mock_20260623_231538.pytof  mock_20260623_231541.pytof  mock_20260624_155818.reference.h5  mock_Au111_test_20260623_172643.pytof  mock_Cu_test_20260623_231604.pytof  mock_gui_run.h5  pyproject.toml
pytof_new/pytof_new/: __init__.py  __main__.py  cli.py  exceptions.py  logging_config.py
pytof_new/pytof_new.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pytof_new/pytof_new/acquisition/: __init__.py  controller.py  models.py  real_coordinator.py  real_worker.py  state.py  trigger_counts.py  worker.py
pytof_new/pytof_new/config/: __init__.py  defaults.json  legacy_ini.py  models.py
pytof_new/pytof_new/gui/: __init__.py  acquisition_panel.py  (+11 more)
pytof_new/scripts/: mock_acquire_batch.py  probe_bme.py  probe_spectrum.py  probe_spectrum_bme.py
pytof_new/tests/: test_acquisition_planner.py  test_bme_constants.py  test_bme_delay_generator.py  test_bme_driver.py  test_bme_service.py  test_cli.py  test_config.py  test_gui_smoke.py  test_mock_acquisition.py  test_probe_spectrum_bme.py  test_processing.py  test_real_coordinator.py  test_real_workers.py  test_spectrum_converter.py  test_spectrum_digitizer.py  test_spectrum_driver.py  test_spectrum_limits.py  test_spectrum_service.py  test_storage.py  test_trigger_counts.py
(+34 files in other folders)
