[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytof-new"
version = "0.1.0"
description = "Modular TOF-MS acquisition application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "h5py>=3.10",
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
]

[project.scripts]
pytof-new = "pytof_new.__main__:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pytof_new*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
